@@ -1,5 +1,6 @@
 Version 2.02.87 - 
 ===============================
+  Use memory pool locking to check for corruption of internal VG structs.
   Cache and share generated VG structs.
   Fix possible format instance memory leaks and premature releases in _vg_read.
   Suppress locking error messages in monitoring init scripts.
